tests/fails/12.mat
matrix a[1,1]
scalar c
choose(a,a,a,a)
a*a
